@@ -1,4 +1,5 @@
 - opt in to PDL 2.058+ multi-C
+- add GitHub repo metadata
 
 0.1.0	01-04-2013
 		Added support for custom RGB space.
